# docker-to-cloudwatch-test

./: .env.example  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: ci.yaml
src/config/: settings.py
src/core/: dto.py  utils.py
src/modules/cloudwatch/: client.py  dto.py  exception_handlers.py
src/modules/docker/: client.py  exception_handlers.py  exceptions.py
src/modules/general/: dto.py  services.py
