[tool.poetry]
name = "docker-logs-to-cloudwatch"
version = "0.1.0"
description = ""
authors = ["Ruslan <admin@ruslan.beer>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.34.110"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
loguru = "^0.7.2"
boto3-stubs = { extras = ["logs"], version = "^1.34.110" }
click = "^8.1.7"
docker = "^7.0.0"
requests = "<2.32.0"  # 2.32 has an issue with docker: https://github.com/docker/docker-py/issues/3256, https://github.com/ansible-collections/community.docker/issues/868
pydanclick = "^0.2.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
mypy = "^1.10.0"
ruff = "^0.4.4"
pytest = "^8.2.1"
pytest-cov = "^5.0.0"
ipython = "^8.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
docker-to-cloudwatch = "main:main"

[tool.black]
target-version = ["py312"]

[tool.isort]
profile = "black"
py_version = 312
force_alphabetical_sort_within_sections = true
group_by_package = true

[tool.mypy]
python_version = "3.12"
plugins = "pydantic.mypy"
show_error_codes = true
show_error_context = true
pretty = true
ignore_missing_imports = false
warn_unused_configs = true
disallow_subclassing_any = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
follow_imports_for_stubs = true
namespace_packages = true
show_absolute_path = true

[[tool.mypy.overrides]]
module = ["docker.*", "docker.models.containers", "pydanclick.*"]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.ruff]
target-version = "py312"
preview = true

[tool.ruff.lint]
select = [
    "E", "F", "B", "UP", "SIM", "N", "YTT", "ANN", "ASYNC", "S", "A", "COM", "C4",
    "DTZ", "T10", "EM", "FA", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q",
    "RSE", "RET", "SLF", "SLOT", "TID", "TCH", "INT", "ARG", "PTH", "TD", "FIX", "ERA",
    "PLC", "PLE", "PLW", "TRY", "FLY", "NPY", "AIR", "PERF", "FURB", "LOG", "RUF"
]
ignore = ["E501", "E701", "ANN101", "ANN401", "RET504", "PLC0414", "SIM108", "S101"]
ignore-init-module-imports = true

[tool.ruff.format]
line-ending = "lf"
